Fixed the active state on the bottom buttons and fixed the h2 size on mobile.

--- a/src/components/widgets/homepage/Carousel/carousel.scss
+++ b/src/components/widgets/homepage/Carousel/carousel.scss
@@ -122,6 +122,7 @@
   background-position: center center;
   background-blend-mode: soft-light;
   background-size: cover;
+  line-height: 1rem;
 
   &[disabled] {
     cursor: not-allowed;
@@ -151,20 +152,20 @@
   &:focus,
   &.active {
     div {
+      transition: transform .5s;
       transform: translate3d(0, -0.5rem, 0);
     }
     &:before {
+      transition: transform .5s;
       transform: translate3d(0, 0.75rem, 0);
     }
   }
   &:hover{
     text-decoration: none;
-  }
-  div{
-    transition: all 0.5s ease-out;
-    &:hover{
-      text-shadow: 2px 2px 4px black;
-      transform: scale(1.1);
+
+    *{
+      transition: color .5s;
+      color:rgb(178, 178, 178);
     }
   }
   img {
@@ -181,7 +182,7 @@
     height: 50px;
   }
   #carousel-controls {
-    top: -13vh; //Some way to make this proportional to the img height would be nice, like the 55vh in the slide img
+    top: -13vh;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -206,12 +207,9 @@
    h3{
     font-size: 1.5rem;
    }
-   h4{
+   h2{
     font-size: 1rem;
-
    }
-  }
-  #carousel-controls {
-    // top: -150px !important;
+
   }
 }
